--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
     "sammy": "^0.7.5",
     "font-awesome": "^4.0.3",
     "knockout.validation": "^1.0.2",
-    "bootstrap-sass-official": "^3.2.0"
+    "bootstrap-sass-official": "^3.2.0",
+    "spin.js": "spin-js#^2.0.1"
   }
 }
-
